--- a/releaf-front/src/styles/globals.css
+++ b/releaf-front/src/styles/globals.css
@@ -52,7 +52,13 @@
       background-position: calc(100% + var(--shiny-width)) 0;
     }
   }
-}
+  --animate-blink-cursor: blink-cursor 1.2s step-end infinite
+;
+  @keyframes blink-cursor {
+  0%, 49% {
+    opacity: 1;}
+  50%, 100% {
+    opacity: 0;}}}
 
 :root {
   --radius: 0.625rem;
